# WiiUPluginSystem

./: .gitignore  .gitmodules  .travis.yml  Dockerfile  Dockerfile.buildexamples  Dockerfile.buildlocal  Doxyfile  Makefile  PLANS.MD  README.MD  README.md  _config.yml  gitrev.sh  index.md  installupdateportlibs.sh  jekyll.sh  plugin_makefile.mk  wups.ld  wups_elf.ld
.github/workflows/: ci.yml  pr.yml  push_image.yml  release.yml
_data/: tags.yml  terms.yml  topnav.yml
_data/sidebars/: dev_sidebar.yml  home_sidebar.yml
_includes/: footer.html
docker/core/: Dockerfile
example_plugin/: Makefile  main.c  makefile.mk
example_plugin/src/: main.c  main.cpp
ide_templates/codeblocks/: Makefile  README.md  makefile.mk  windows_template.cbp
include/: wups.h
include/wups/: button_combo.h  button_combo_internal.h  common.h  config.h  config_api.h  config_imports.h  function_patching.h  hooks.h  meta.h  reent_internal.h  storage.h  utils.h  wups_debug.h
libraries/libwups/: LinkedList.h  WUPSButtonCombo.cpp  WUPSConfigCategory.cpp  WUPSConfigItem.cpp  WUPSConfigItemBoolean.cpp  WUPSConfigItemBooleanCpp.cpp  (+25 more)
loader/: Makefile  README.md  filelist.sh  gitrev.sh
plugins/: Makefile
plugins/example_plugin_cmake/: CMakeLists.txt  Dockerfile  README.md
plugins/example_plugin_cmake/src/: main.cpp
plugins/example_plugin_cmake/src/utils/: CMakeLists.txt
share/: wups.cmake  wups.ld  wups.specs  wups_rules
src/: fs_function_wrapper.c  fs_function_wrapper.cpp  kernel.cpp  overlay.c  overlay.cpp
wups_include/: common.h  function_patching.h  hooks.h  utils.h  wups.h
(+260 files in other folders)
